--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="menu-items">
                 <!-- Dish 1 -->
                 <div class="menu-item">
-                    <img src="assets/images/menu/__ 1.png" alt="Kazakh eti classic from horse meat">
+                    <img src="assets/images/menu/suret 1.png" alt="Kazakh eti classic from horse meat">
                     <h3>Kazakh Eti Classic from Horse Meat</h3>
                     <div class="menu-item__rating">
                         <img src="assets/images/menu/star-orange.svg" alt="">
